# Recruitment_JPC-EC-DG

./: AUTOEVALUACIONJPCespedes.docx  AUTOEVALUACION_DGomez.docx  Informe Emmanuel Collazos Bravo.docx  README.md
Test/: CMakeLists.txt  ReclutadorTest.cpp
prueba/: CMakeLists.txt
prueba/Model/: Candidato.cpp  Candidato.h  Colombiano.cpp  Colombiano.h  Coreano.h  Entrevista.cpp  Entrevista.h  Frances.cpp  Frances.h  Nacionalidad.cpp  Nacionalidad.h  Reclutador.cpp  Reclutador.h  Sudafricano.h
src/: CMakeLists.txt  main.cpp
src/Model/: Candidato.cpp  Candidato.h  Colombiano.cpp  Colombiano.h  Coreano.cpp  Coreano.h  Entrevista.cpp  Entrevista.h  Frances.cpp  Frances.h  Nacionalidad.cpp  Nacionalidad.h  PatronFactory.cpp  PatronFactory.h  Reclutador.cpp  Reclutador.h  Sudafricano.cpp  Sudafricano.h
src/View/: View.cpp  View.h
