cmake_minimum_required(VERSION 3.20)
project(Recruitment_JPC_EC_DG)

set(CMAKE_CXX_STANDARD 14)

add_executable(Recruitment_JPC_EC_DG main.cpp View/View.cpp View/View.h Model/Candidato.cpp Model/Candidato.h Model/Colombiano.cpp Model/Colombiano.h Model/Nacionalidad.cpp Model/Nacionalidad.h Model/Coreano.cpp Model/Coreano.h Model/Sudafricano.cpp Model/Sudafricano.h Model/Frances.cpp Model/Frances.h Model/Reclutador.cpp Model/Reclutador.h Model/PatronFactory.cpp Model/PatronFactory.h)

